force-app/main/default/objects/Bulletin_Tag__c/Bulletin_Tag__c.object-meta.xml
<CustomObject>
    <label>Tag</label>
    <nameField>
        <label>Tag Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tags</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>